# intelligent-kiosk-analytics-cpp

./: AdList.json  CMakeLists.txt  README.md  install_influx_grafana.sh  install_mediasdk_dependencies.sh  kiosk-analytics.json  setup.sh
application/: CMakeLists.txt
application/include/: detectors.hpp  interactive_face_detection.hpp  main.hpp  pipeline_decode.h
application/src/: detectors.cpp  influxdb.cpp  interactive_face_detection.cpp  main.cpp  pipeline_decode.cpp  sample_decode.cpp  visualizer.cpp
builder/: CMakeLists_common.cmake  FindFunctions.cmake
cmake/: CMakeLists_common.cmake  FindFunctions.cmake  FindGlobals.cmake  FindMFX.cmake  FindPackages.cmake
kiosk/: CMakeLists.txt
kiosk/include/: interactive_face_detection.hpp  main.hpp  pipeline_decode.h
kiosk/src/: interactive_face_detection.cpp  json_parser.cpp  main.cpp  pipeline_decode.cpp
resources/: AdList.json  config.json  femaleAd.h265  maleAd.h265
sample_common/: CMakeLists.txt
sample_common/include/: abstract_splitter.h  avc_bitstream.h  avc_headers.h  avc_nal_spl.h  avc_spl.h  avc_structures.h  base_allocator.h  brc_routines.h  current_date.h  d3d11_allocator.h  d3d_allocator.h  d3d_device.h  decode_render.h  general_allocator.h  hw_device.h  intrusive_ptr.h  mfx_buffering.h  mfx_itt_trace.h  mfx_plugin_base.h  mfx_plugin_module.h  mfx_samples_config.h  parameters_dumper.h  plugin_loader.h  plugin_utils.h  sample_defs.h  sample_types.h  sample_utils.h  shared_ptr.h  surface_auto_lock.h  sysmem_allocator.h  time_statistics.h  v4l2_util.h  vaapi_allocator.h  vaapi_device.h  vaapi_utils.h  (+5 more)
(+33 files in other folders)
